--- a/src/Component/UI/AddNewModal/AddNew.css
+++ b/src/Component/UI/AddNewModal/AddNew.css
@@ -10,185 +10,28 @@
   padding: 7px 15px;
 }
 
-.nav-up {
-  transform: translateY(-100px);
-  opacity: 0;
-}
-
-li.sty {
-  padding-left: 10px;
-  font-size: 18px;
-  display: inline;
-  text-align: left;
-  text-transform: uppercase;
-  padding-right: 10px;
-  color: #ffffff;
-}
-
-.form1-active a {
-  padding-bottom: 10px;
-  color: #1059ff;
-  text-decoration: none;
-  border-bottom: solid 2px #1059ff;
-  transition: all 0.25s ease;
-  cursor: pointer;
-}
-
-.form1-inactive a {
-  padding-bottom: 0;
-  color: #000000;
-  text-decoration: none;
+.addnew .nav-tabs {
   border-bottom: none;
-  cursor: pointer;
 }
 
-.form2-active a {
-  cursor: pointer;
-  color: #1059ff;
+.addnew .nav-tabs .nav-item .nav-link {
+  color: #000;
+  border: none;
   text-decoration: none;
-  border-bottom: solid 2px #1059ff;
+  transition: all 0.3s ease;
+}
+
+.addnew .nav-tabs .nav-item .active {
+  color: #005b7f;
+  border: 0px;
   padding-bottom: 10px;
-}
-
-.form2-inactive a {
+  border-bottom: solid 2px #1059ff;
+  transition: all 0.3s ease;
   cursor: pointer;
-  color: #000000;
-  text-decoration: none;
-  transition: all 0.25s ease;
 }
 
-.btn:focus {
-  box-shadow: none;
-}
-
-.ht {
-  height: 440px;
-}
-
-.form1 {
-  width: 500px;
-  height: 400px;
-  font-size: 16px;
-  font-weight: 300;
-  padding: 5px 50px 0;
-  transition: opacity 0.5s ease, transform 0.5s ease;
-}
-
-.form1-left {
-  transform: translateX(-500px);
-  opacity: 0;
-}
-
-.form2 {
-  width: 500px;
-  height: 400px;
-  font-size: 16px;
-  font-weight: 300;
-  padding: 5px 50px 0;
-  position: relative;
-  top: -375px;
-  left: 500px;
-  opacity: 0;
-  transition: all 0.5s ease;
-}
-
-.form2-left {
-  transform: translateX(-499px);
-  opacity: 1;
-}
-
-.form2-down {
-  top: 0px;
-  opacity: 0;
-}
-
-.form1 input,
-.form2 input {
-  color: black;
-  font-size: 13px;
-}
-
-[type="checkbox"]:not(:checked),
-[type="checkbox"]:checked {
-  position: absolute;
-  display: none;
-}
-
-[type="checkbox"]:not(:checked) + label,
-[type="checkbox"]:checked + label {
-  position: relative;
-  padding-left: 75px;
-  padding-top: 2px;
-  cursor: pointer;
-  margin-top: 8px;
-}
-
-[type="checkbox"]:not(:checked) + label:before,
-[type="checkbox"]:checked + label:before {
-  content: "";
-  position: absolute;
-  width: 65px;
-  height: 30px;
-  background: #7d7d7d;
-  border-radius: 15px;
-  left: 0;
-  top: 1px;
-  transition: all 0.2s ease;
-}
-
-[type="checkbox"]:not(:checked) + label:after,
-[type="checkbox"]:checked + label:after {
-  content: "";
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  background: rgba(255, 255, 255, 0.7);
-  border-radius: 50%;
-  top: 10px;
-  left: 10px;
-  transition: all 0.2s ease;
-}
-
-/* on checked */
-[type="checkbox"]:checked + label:before {
-  background: #0f4fe6;
-}
-
-[type="checkbox"]:checked + label:after {
-  background: #ffffff;
-  top: 10px;
-  left: 45px;
-}
-
-[type="checkbox"]:checked + label .ui,
-[type="checkbox"]:not(:checked) + label .ui:before,
-[type="checkbox"]:checked + label .ui:after {
-  position: absolute;
-  left: 6px;
-  width: 65px;
-  border-radius: 15px;
-  font-size: 14px;
-  font-weight: bold;
-  line-height: 22px;
-  transition: all 0.2s ease;
-}
-
-[type="checkbox"]:not(:checked) + label .ui:before {
-  content: "no";
-  left: 32px;
-  color: rgba(255, 255, 255, 0.7);
-  top: 3px;
-}
-
-[type="checkbox"]:checked + label .ui:after {
-  content: "yes";
-  color: #ffffff;
-  top: 2px;
-}
-
-[type="checkbox"]:focus + label:before {
-  box-sizing: border-box;
-  margin-top: -1px;
+.addnew .tab-content .container {
+  padding: 10px;
 }
 
 .addnew label {
