--- a/src/Component/UI/AddNewModal/AddNewModal.module.css
+++ b/src/Component/UI/AddNewModal/AddNewModal.module.css
@@ -21,12 +21,8 @@
   background: #000;
 }
 
-.nav {
-  width: 100%;
-  height: 50px;
-  padding: 0;
-  opacity: 1;
-  transition: all 0.5s ease;
+.form {
+  padding: 0 15px;
 }
 
 @media (min-width: 768px) {
