--- a/src/Component/Admin/Home/UploadPatterns/Category/InfoBox.css
+++ b/src/Component/Admin/Home/UploadPatterns/Category/InfoBox.css
@@ -54,7 +54,7 @@
 }
 .content .wrap .btn-set {
   width: 50%;
-  padding: 15px 0;
+  padding: 0 10px;
 }
 .content .wrap .btn-set button {
   width: 100%;
