--- a/src/Component/UI/Swipers/SwiperSub.css
+++ b/src/Component/UI/Swipers/SwiperSub.css
@@ -128,15 +128,15 @@ h1.heading {
 }
 
 .arrow-box {
-  position: fixed;
-  width: 24%;
+  position: absolute;
+  width: 100%;
   right: 0;
   bottom: 0;
   display: flex;
   justify-content: space-between;
   background: rgba(0, 0, 0, 0.16);
   padding: 5px 35px;
-  margin: 0 20px 12px;
+  margin: 0;
 }
 .arrow-box .slideNext,
 .arrow-box .slidePrev {
