--- a/src/Component/UI/AddNewModal/AddNew.css
+++ b/src/Component/UI/AddNewModal/AddNew.css
@@ -126,9 +126,9 @@
   opacity: 1;
 }
 
-.addnew button.publish {
+/* .addnew button.publish {
   margin-right: 25px;
-}
+} */
 
 .addnew button {
   border: 1px solid #005b7f;
