--- a/src/Component/UI/Swipers/SwiperSub.css
+++ b/src/Component/UI/Swipers/SwiperSub.css
@@ -82,7 +82,7 @@ h1.heading {
 }
 .content .wrap .btn-set {
   width: 50%;
-  padding: 15px 0;
+  padding: 0 10px;
 }
 .content .wrap .btn-set button {
   width: 100%;
