--- a/src/Component/UI/AddNewModal/ChangeModal.css
+++ b/src/Component/UI/AddNewModal/ChangeModal.css
@@ -60,7 +60,7 @@ li.sty {
   text-decoration: none;
   transition: all 0.25s ease;
 }
-
+/* 
 .ht {
   height: 440px;
 }
@@ -149,7 +149,6 @@ li.sty {
   transition: all 0.2s ease;
 }
 
-/* on checked */
 [type="checkbox"]:checked + label:before {
   background: #0f4fe6;
 }
@@ -189,7 +188,7 @@ li.sty {
 [type="checkbox"]:focus + label:before {
   box-sizing: border-box;
   margin-top: -1px;
-}
+} */
 
 .addnew label {
   margin: 0 0 15px;
@@ -265,9 +264,9 @@ li.sty {
   opacity: 1;
 }
 
-.addnew button.publish {
+/* .addnew button.publish {
   margin-right: 25px;
-}
+} */
 
 .addnew button {
   border: 1px solid #005b7f;
