--- a/src/Component/Admin/Home/UploadPatterns/Patterns/Info.css
+++ b/src/Component/Admin/Home/UploadPatterns/Patterns/Info.css
@@ -1,6 +1,6 @@
 .info {
   width: 70%;
-  padding: 10px;
+  padding: 10px 10px 0;
 }
 .info .flex {
   display: flex;
@@ -46,6 +46,8 @@
   border: 1px solid #005b7f;
   border-radius: 5px;
   padding: 10px 5px;
+  overflow-y: auto;
+  height: 570px;
 }
 .content .col-3 {
   padding: 5px;
