--- a/src/Component/Admin/Home/Orders/OrderDetails.module.css
+++ b/src/Component/Admin/Home/Orders/OrderDetails.module.css
@@ -2,12 +2,20 @@
   padding: 10px;
   position: relative;
 }
+
 .status {
   width: 100%;
   padding: 10px;
 }
+
 .summary {
-  border: 1px solid #a6c8cc;
+  /* border: 1px solid #a6c8cc; */
+  padding: 0 0 5px;
+  list-style: none;
+}
+
+.summary::-webkit-details-marker {
+  display: none;
 }
 .no {
   position: absolute;
@@ -40,6 +48,7 @@
 .row {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   width: 100%;
 }
 .row1 {
@@ -60,7 +69,7 @@
 
 .col6 {
   width: 35%;
-  padding: 5px;
+  padding: 0 5px 5px;
 }
 
 .title {
@@ -69,12 +78,19 @@
   margin: 0 10px;
 }
 
+.title1 {
+  padding: 8px 5px;
+  border-bottom: 1px solid;
+  margin: 0 10px 5px;
+}
+
 .userd {
   display: flex;
   margin: 0 0 10px;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 35%;
+  width: 25%;
+  height: fit-content;
   box-shadow: 1px 1px 5px 2px rgb(0 0 0 / 18%);
 }
 
@@ -83,12 +99,13 @@
   margin: 0 0 10px;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 26%;
+  width: 25%;
   box-shadow: 1px 1px 5px 2px rgb(0 0 0 / 18%);
 }
 
 .descrb {
-  width: 35%;
+  width: 37%;
+  height: fit-content;
   margin: 0 0 10px;
   box-shadow: 1px 1px 5px 2px rgb(0 0 0 / 18%);
 }
@@ -98,7 +115,8 @@
   margin: 0 0 10px;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 49%;
+  width: 30%;
+  height: fit-content;
   box-shadow: 1px 1px 5px 2px rgb(0 0 0 / 18%);
 }
 
@@ -107,7 +125,7 @@
   margin: 0 0 10px;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 49%;
+  width: 42%;
   box-shadow: 1px 1px 5px 2px rgb(0 0 0 / 18%);
 }
 
@@ -125,7 +143,6 @@
   margin: 0 0 10px;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 32%;
   box-shadow: 1px 1px 5px 2px rgb(0 0 0 / 18%);
 }
 .mescloth {
@@ -133,7 +150,7 @@
   margin: 0 0 10px;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 32%;
+  width: 100%;
   box-shadow: 1px 1px 5px 2px rgb(0 0 0 / 18%);
 }
 .scloth {
@@ -141,21 +158,29 @@
   margin: 0 0 10px;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 32%;
+  width: 100%;
   box-shadow: 1px 1px 5px 2px rgb(0 0 0 / 18%);
 }
 
-/* .umi {
-  width: 49%;
+.mpi {
+  margin: 0 0 10px;
+  box-shadow: 1px 1px 5px 2px rgb(0 0 0 / 18%);
+}
+
+.api {
+  margin: 0 0 10px;
+  box-shadow: 1px 1px 5px 2px rgb(0 0 0 / 18%);
+}
+
+.umi {
   margin: 0 0 10px;
   box-shadow: 1px 1px 5px 2px rgb(0 0 0 / 18%);
 }
 
 .uai {
-  width: 49%;
   margin: 0 0 10px;
   box-shadow: 1px 1px 5px 2px rgb(0 0 0 / 18%);
-} */
+}
 
 .para {
   margin: 0;
