--- a/src/Component/Admin/Home/Orders/Image.css
+++ b/src/Component/Admin/Home/Orders/Image.css
@@ -9,7 +9,7 @@
 }
 
 /* The Modal (background) */
-.modal {
+/* .modal {
   display: none;
   position: fixed;
   z-index: 1;
@@ -20,7 +20,7 @@
   height: 100%;
   overflow: auto;
   background-color: black;
-}
+} */
 
 /* Modal Content */
 .modal-content {
