--- a/src/Component/Admin/Home/Tailor/Tailor.css
+++ b/src/Component/Admin/Home/Tailor/Tailor.css
@@ -2,6 +2,10 @@
   padding: 10px;
 }
 
+.tailor .ordercontent {
+  margin: 0;
+}
+
 .tailor .nullify {
   color: #000;
   background: none;
@@ -62,7 +66,7 @@
   position: absolute;
   margin: 5px;
   background: #000;
-  width: 50%;
+  width: 65%;
   height: -webkit-fill-available;
   overflow: hidden;
   top: 0;
@@ -172,6 +176,7 @@
 
 .tailor .list .head p {
   font-size: 16px;
+  font-weight: 600;
   padding: 7px;
   margin: 0;
   text-align: center;
