--- a/src/Component/Admin/Home/UploadPatterns/Patterns/Info.css
+++ b/src/Component/Admin/Home/UploadPatterns/Patterns/Info.css
@@ -46,8 +46,6 @@
   border: 1px solid #005b7f;
   border-radius: 5px;
   padding: 10px 5px;
-  overflow-y: auto;
-  height: 570px;
 }
 .content .col-3 {
   padding: 5px;
@@ -71,16 +69,22 @@
   width: 100%;
   height: auto;
 }
-.content_box p.name {
+.content_box .bottom-row {
   position: absolute;
   bottom: 0;
   left: 0;
-  display: inline-block;
   width: 100%;
-  padding: 5px 12px;
   margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  background: #a6c8cc;
+}
+
+.content_box .bottom-row p.pname {
+  padding: 5px;
   font-size: 16px;
   color: #000000;
-  background: #a6c8cc;
+  margin: 0;
   font-family: initial;
 }
