--- a/src/Component/Admin/Home/Orders/Completedorder/completedorder.css
+++ b/src/Component/Admin/Home/Orders/Completedorder/completedorder.css
@@ -66,7 +66,7 @@ button {
 }
 
 .completed p.cat {
-  width: 19%;
+  width: 15%;
 }
 
 .completed p.cname {
@@ -80,7 +80,9 @@ button {
 .completed p.tname {
   width: 20%;
 }
-
+.completed p.accept {
+  width: 4%;
+}
 .completed p.tno {
   width: 15%;
 }
