--- a/src/Component/UI/AddNewModal/NewStyleModal.css
+++ b/src/Component/UI/AddNewModal/NewStyleModal.css
@@ -107,7 +107,7 @@ li.sty {
   border: 1px solid #005b7f;
   padding: 5px 12px;
   float: right;
-  margin: 5px 10px;
+  margin: 5px 10px 15px;
   outline: none;
   width: 150px;
   border-radius: 5px;
