--- a/src/Component/Admin/Home/Orders/ProcessingOrder/processingorder.css
+++ b/src/Component/Admin/Home/Orders/ProcessingOrder/processingorder.css
@@ -32,16 +32,16 @@ button {
 }
 
 .summary p {
-  font-size: 18px;
+  font-size: 16px;
   display: inline-block;
   padding: 10px 5px;
   margin: 0;
   border-right: 1px solid #a6c8cc;
+  text-align: center;
 }
 
 .summary p.ono {
-  width: 6%;
-  text-align: center;
+  width: 8%;
 }
 
 .summary > p:last-child {
@@ -50,11 +50,11 @@ button {
 }
 
 .summary .anchor {
-  font-size: 18px;
+  font-size: 16px;
   display: inline-block;
   padding: 0;
   margin: 0;
-  width: 5%;
+  width: 7%;
   text-align: center;
 }
 
@@ -68,54 +68,50 @@ button {
 /* received && processing */
 
 .received p.cat {
-  width: 25%;
+  width: 23%;
 }
 
 .received p.tname {
-  width: 25%;
-  text-align: center;
+  width: 23%;
 }
 
 .received p.tno {
   width: 19%;
-  text-align: center;
 }
 
 .received p.ddate {
   width: 20%;
-  text-align: center;
 }
 
 /* repick */
 
 .repick p.cat {
-  width: 13%;
+  width: 15%;
 }
 
 .repick p.tname {
-  width: 13%;
-  text-align: left;
+  width: 17%;
 }
 
 .repick p.tno {
   width: 15%;
-  text-align: center;
 }
 
 .repick p.cname {
-  width: 18%;
-  text-align: left;
+  width: 15%;
 }
 
 .repick p.cno {
   width: 15%;
-  text-align: center;
 }
 
 .repick p.select {
   width: 15%;
   padding: 10px 5px;
-  text-align: center;
+}
+.repick p.accept {
+  width: 8%;
+  cursor: pointer;
 }
 
 .repick select {
@@ -130,28 +126,24 @@ button {
 /* finished */
 
 .finished p.cat {
-  width: 20%;
+  width: 15%;
 }
 
 .finished p.tname {
-  width: 24%;
-  text-align: center;
+  width: 19%;
 }
 
 .finished p.tno {
   width: 15%;
-  text-align: center;
 }
 
 .finished p.ddate {
   width: 20%;
-  text-align: center;
 }
 
 .finished p.accept,
 .finished p.reject {
-  width: 5%;
-  text-align: center;
+  width: 8%;
   cursor: pointer;
 }
 
@@ -161,4 +153,19 @@ button {
 
 .finished p.reject {
   color: red;
+}
+
+.head {
+  border: 2px solid #005b7f;
+}
+
+.head p,
+.head .anchor {
+  font-size: 18px;
+  font-weight: 600;
+  border-right: 2px solid #005b7f;
+  text-transform: uppercase;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
