--- a/src/Component/Admin/Home/Tailor/Tailor.css
+++ b/src/Component/Admin/Home/Tailor/Tailor.css
@@ -235,7 +235,7 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  background: #ccc;
+  /* background: #ccc; */
 }
 
 .tailor .list .inner-box1 {
