--- a/src/Component/Admin/Home/UploadPatterns/Patterns/Patterns.css
+++ b/src/Component/Admin/Home/UploadPatterns/Patterns/Patterns.css
@@ -1,39 +1,39 @@
-.flex {
+.pattern .flex {
   display: flex;
   padding: 10px;
   flex-wrap: wrap;
   width: 100%;
 }
 
-.flex .img {
+.pattern .flex .img {
   width: 20%;
   padding: 10px;
   border-radius: 5px;
   border: 1px solid #1b1212;
 }
 
-.flex .img_fluid {
+.pattern .flex .img_fluid {
   width: 100%;
   min-height: 180px;
 }
 
-.flex .innerwrap {
+.pattern .flex .innerwrap {
   padding: 10px 20px;
   position: relative;
   align-content: center;
   width: 30%;
 }
-.flex .innerwrap p.gender_name {
+.pattern .flex .innerwrap p.gender_name {
   font-size: -webkit-xxx-large;
   font-family: initial;
   text-align: center;
   padding: 5px 12px;
   margin: 30px 0 10px;
 }
-.flex .innerwrap button.publish {
+.pattern .flex .innerwrap button.publish {
   right: 20px;
 }
-.flex .innerwrap button {
+.pattern .flex .innerwrap button {
   border: 1px solid #005b7f;
   padding: 5px 12px;
   bottom: 0;
@@ -42,11 +42,11 @@
   border-radius: 5px;
   transition: all ease 0.3s;
 }
-.flex .innerwrap button:hover {
+.pattern .flex .innerwrap button:hover {
   background: #005b7f;
   color: #fff;
 }
-.flex .selected {
+.pattern .flex .selected {
   padding: 10px 20px;
   width: 50%;
   height: 180px;
@@ -54,19 +54,19 @@
   display: flex;
   flex-wrap: wrap;
 }
-.selected .selected_value {
+.pattern .selected .selected_value {
   flex-grow: 1;
   padding: 5px 7px;
   border-radius: 5px;
 }
-.selected .selected_value p.name {
+.pattern .selected .selected_value p.name {
   padding: 5px 15px;
   position: relative;
   margin: 0;
   border: 1px solid #005b7f;
   border-radius: 5px;
 }
-.selected .selected_value p.name::after {
+.pattern .selected .selected_value p.name::after {
   position: absolute;
   content: "\2713";
   top: 0;
